# rust-mnist-web-app

./: .gitignore  CNAME  Cargo.toml  Dockerfile  README.md  build-for-web.sh  entrypoint.sh  index.html  index.js  inference.js  inference_bg.wasm  run_server.sh
.github/workflows/: ci.yml
examples/: train.rs
inference/: Cargo.toml
inference/src/: model.rs  state.rs
models/checkpoint/: model-5.mpk  model-6.mpk  model-7.mpk  optim-5.mpk  optim-6.mpk  optim-7.mpk  scheduler-7.mpk
training/: Cargo.toml
training/src/: lib.rs  model.rs  training.rs
