[package]
name = "inference"
version = "0.1.0"
authors = ["Your Name <youremail@example.com>"]
edition = "2018"
license = "MIT" # Or your chosen license
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["ndarray"]
ndarray = ["burn/ndarray"]

[dependencies]
burn = { git = "https://github.com/burn-rs/burn.git", default-features = false}
serde = "1.0.197"
serde_json = { version = "1.0.114", default-features = false }
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.41"
js-sys = "0.3.68"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
pollster = {  }
