[package]
name = "training"
version = "0.1.0"
authors = ["Your Name <youremail@example.com>"]
edition = "2018"
license = "MIT" # Or your chosen license
publish = false

[features]
ndarray = ["burn/ndarray"]
ndarray-blas-accelerate = ["burn/ndarray", "burn/accelerate"]
ndarray-blas-netlib = ["burn/ndarray", "burn/blas-netlib"]
ndarray-blas-openblas = ["burn/ndarray", "burn/openblas"]
tch-cpu = ["burn/tch"]
tch-gpu = ["burn/tch"]
wgpu = ["burn/wgpu"]

[dependencies]
burn = { git = "https://github.com/burn-rs/burn.git", features = ["train", "wgpu", "tch", "dataset", "vision", "ndarray"] }
